[gd_scene load_steps=35 format=3 uid="uid://big5kolfa5dqc"]

[ext_resource type="Texture2D" uid="uid://jagwwxtjh3v7" path="res://assets/sprites/knight.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://brejbwubl7kt6" path="res://scripts/player.gd" id="1_g2els"]

[sub_resource type="Gradient" id="Gradient_g2els"]
offsets = PackedFloat32Array(0.106667, 0.686667)
colors = PackedColorArray(0.0392157, 0.439216, 0.188235, 1, 1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm0ti"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhbv5"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqap4"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c7ny"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jhex"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38am0"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfidv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxd4c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pev8"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fytk8"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clacw"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj7ip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ripyi"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahudb"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c160a"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pfnn"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttksc"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_earxd"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g721l"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdt5j"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i00hk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci3gn"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrcu"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xowrn"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc7v5"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm0ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhbv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqap4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c7ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jhex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38am0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfidv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxd4c")
}],
"loop": false,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pev8")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fytk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clacw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj7ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ripyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahudb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c160a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pfnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttksc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_earxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g721l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdt5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i00hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci3gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xowrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc7v5")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(8, 13)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_g2els")

[node name="DashParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.2
one_shot = true
speed_scale = 0.55
draw_order = 1
emission_shape = 2
emission_sphere_radius = 4.87
direction = Vector2(0, 0)
spread = 21.37
gravity = Vector2(0, 0)
initial_velocity_min = 40.41
initial_velocity_max = 40.41
angular_velocity_min = -625.45
angular_velocity_max = -625.45
angle_max = 41.0
scale_amount_min = 2.1
scale_amount_max = 3.05
color_ramp = SubResource("Gradient_g2els")

[node name="ShotgunParticles" type="CPUParticles2D" parent="."]
position = Vector2(8, 0)
emitting = false
one_shot = true
preprocess = 0.25
speed_scale = 5.55
explosiveness = 1.0
spread = 10.32
gravity = Vector2(0, 0)
initial_velocity_min = 20.2
initial_velocity_max = 80.81
scale_amount_min = 4.1
scale_amount_max = 4.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"dash"
autoplay = "idle"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3vyb7")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -3)

[node name="ShotgunRayCast" type="RayCast2D" parent="."]

[node name="MeleeRayCast" type="RayCast2D" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
